[package]
name = "nexus-config-backup"
version = "0.1.5"
edition = "2021"
authors = ["Zyian"]
description = "A small utility to save all of your addons configs safely away for a rainy day."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "nexus_config_backup"

[dependencies]
walkdir = "2.4.0"
zip = "2.1.3"
dirs-next = "2.0.0"
chrono = "0.4.38"
once_cell = "1.19.0"
toml = "0.8.14"
serde = { version = "1.0.197", features = ["derive"] }

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs.git"
rev = "8dec2c8ea5872b42c315c419493912ce5d7565fb"
